# shallow-backup

./: .codeclimate.yml  .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Pipfile  README.md  config.ini  constants.py  pyproject.toml  requirements.txt  scrape_dotfiles.sh  scrape_lists.sh  setup.cfg  setup.py  shallow-backup.py  shallowBackup.py  shallow_backup.py  stylize.py  test_shallow_backup.py
.github/workflows/: black.yml  pylint.yml  test.yml
coverage_html/: index.html  shallow_backup___init___py.html  shallow_backup_backup_py.html  shallow_backup_compatibility_py.html  shallow_backup_config_py.html  shallow_backup_constants_py.html  shallow_backup_git_wrapper_py.html  shallow_backup_printing_py.html  shallow_backup_utils_py.html  status.json
docs/: Troubleshooting.md  design-guide.md  design-guidelines.md  development-guide.md  ui-style-guidelines.md
scripts/: release.sh
shallow-backup-scripts/: scrape_dotfiles.sh  scrape_installs.sh
shallow_backup/: __init__.py  __main__.py  backup.py  backup_paths_temp.py  cli.py  compatibility.py  config.py  constants.py  git_wrapper.py  printing.py  prompts.py  reinstall.py  shallow_backup.py  upgrade.py  utils.py
tests/: test_backups.py  test_config.py  test_copies.py  test_delete_backup.py  test_deletes.py  test_git.py  test_git_folder_moving.py  test_reinstall_dotfiles.py  test_utils.py  testing_utility_functions.py
