[metadata]
description_file = README.md

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal=1

[tool:pytest]
# When https://github.com/pytest-dev/pytest-cov/issues/242 is fixed, uncomment this.
#addopts = -v --doctest-modules --ignore=setup.py --cov=shallow_backup
